traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:13: error: not found: value finlpos
        finlpos=true
        ^